# lovable-frog

./: Cargo.toml  README.md
docs/: lf-er.drawio
migrations/2020-10-26-101642_create_hero/: down.sql  up.sql
src/: lib.rs  main.rs  menu_interface.rs  models.rs  schema.rs
